# noodle

./: Cargo.toml  README.md
bowl/: Cargo.toml
bowl/src/: hashgraph.rs  lib.rs  link.rs  linked.rs  simple.rs  vertex.rs  visited.rs
core/: Cargo.toml
core/src/: daggy.rs  dirty.rs  errors.rs  factory.rs  graph.rs  group.rs  hash_graph.rs  hgraph.rs  lib.rs  link.rs  node.rs  petgraph.rs  socket.rs  solve.rs  store.rs  traversal.rs  value.rs
daggy/: Cargo.toml
daggy/src/: cached.rs  edges.rs  id.rs  lib.rs  naive.rs
demo/: Cargo.toml
demo/src/: app.rs  main.rs  nodes.rs  settings.rs
egui/: Cargo.toml
egui/src/: connections.rs  graphview.rs  lib.rs  nodeview.rs  spawnmenu.rs
