[package]
name="noodle_bowl"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="A collection of structures for noodle_core"

[features]
default = []
std = []

[dependencies.noodle_core]
version = "0.1.0"
path = "../core"

[dependencies.hashbrown]
version = "0.14.5"

[dependencies.smallvec]
version = "1.13"
features = ["union"]