[package]
name="noodle_core"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="Computational node graphs"

[dependencies.portable-atomic]
version = "1.7"
optional = true

[dependencies.petgraph]
version = "0.6"
optional = true

[features]
# Feature sets
default=[]

# Major features
std = []
petgraph = ["std", "dep:petgraph"]
runtime_types = []

# Minor features
use_atomics = ["dep:portable-atomic"]