[package]
name="noodle_core"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="Computational node graphs"

[dependencies.petgraph]
version = "0.6"
default-features = false
optional = true

[dependencies.daggy]
version = "0.8"
features = ["stable_dag"]
default-features = false
optional = true

[features]
# Feature sets
default=[]

# Major features
std = []
runtime_types = []

# Impls for remote crates
petgraph = ["std", "dep:petgraph"]
daggy = ["petgraph", "dep:daggy"]