[package]
name="noodle_daggy"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="daggy-based graph structures for noodle_core"

[dependencies.noodle_core]
version = "0.1.0"
path = "../core"

[dependencies.smallvec]
version = "1.13"
features = ["union", "const_generics"]

[dependencies.petgraph]
version = "0.6"
default-features = false

[dependencies.daggy]
version = "0.8"
features = ["stable_dag"]
default-features = false