[package]
name="noodle_demo"
version="0.1.0"
edition="2021"
authors=["Veritius <veritiusgaming@gmail.com>"]
license="MIT OR Apache-2.0"
description="An example"

[dependencies.noodle_core]
version = "0.1.0"
path = "../core"

[dependencies.noodle_egui]
version = "0.1.0"
path = "../egui"

[dependencies.egui]
version = "0.28"

[dependencies.eframe]
version = "0.28"